# GrepX

./: README.md
grepx/: Cargo.toml  ROADMAP.md
grepx/src/: cli.rs  engine.rs  main.rs
grepx/src/io/: file_discovery.rs  mod.rs  reader.rs
grepx/src/regex/: matcher.rs  mod.rs
grepx/src/utils/: mod.rs  text.rs
